# serenity

Applications/About/: CMakeLists.txt  main.cpp
Applications/KeyboardMapper/: CMakeLists.txt  KeyboardMap.cpp  KeyboardMap.h  KeyboardMapperWidget.cpp  main.cpp
Applications/SystemMonitor/: main.cpp
Applications/Terminal/: CMakeLists.txt  main.cpp
Base/etc/: SystemServer.ini
Base/home/anon/: LaunchServer.ini
Base/res/: keyboard-layout.json
Base/res/apps/: QuickShow.af
Base/res/html/misc/: pamsuite.html  welcome.html  xpmsuite.html
Base/res/html/misc/pamsuite_files/: buggie-ascii.pam
Base/res/html/misc/xpmsuite_files/: buggie-xpm.xpm  buggie-xpm3.xpm
Kernel/: Random.cpp
Libraries/LibDesktop/: CMakeLists.txt  DialogServerConnection.h  Dialoger.cpp  Dialoger.h
Libraries/LibGUI/: AboutDialog.cpp  CMakeLists.txt
Libraries/LibGfx/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  ImageDecoder.cpp  PAMLoader.cpp  PAMLoader.h  XPMLoader.cpp  XPMLoader.h
Libraries/LibWeb/Loader/: Resource.cpp
Meta/: refresh-serenity-qtcreator.sh
Services/: CMakeLists.txt
Services/DialogServer/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  DialogClient.ipc  DialogServer.ipc  main.cpp
